2006-10-07  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Declare fn:insert-before, fn:tokenize,
	and fn:resolve-QName.

2006-09-30  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (MIN_BUILTIN, MAX_BUILTIN): New constants.
	(<init>): Declare new builtins.
	(walkApplyExp): Handle new builtins.
	* XQuery.java (initXQuery): No longer declare fn:min and fn:max here.

	* XQParser.java (parseNameSpec): Use parseNameTest so we get correct
	namespace-resolution.  And then inline into single caller,
	parseMaybePrimaryExpr.

	* XQParser.java (parseXMLConstructor): Check for correct syntax,
	specifically whitespace, of direct processing-instruction constructor.

	* XQParser.java (parseCount, commentCount): New fields.
	(skipComment): Increment commentCount.
	(parse): Increment parseCount.
	Warn/error if stuff before XQUERY_VERSION_TOKEN.
	* XQuery.java (parse): Error if we saw an empty module.

	* XQuery.java (parse): Don't PARSE_ONE_LINE if reading from a file.

	* XQParser.java (parse): Fix thinko in logic for checking encoding
	specification 'xquery version' declaration.

	* XQParser.java (parseExprSequence): New parameter 'optional'.
	Error if empty body and optional is false.
	(parseStepQualifiers, parseParenExpr,
	parseMaybePrimaryExpr): Update callers.
	(parseStepQualifiers): Error if unexpected EOF_TOKEN.

	* XQParser.java (parseXMLConstructor): Improved error message.

2006-09-29  Per Bothner  <per@bothner.com>

	* XQParser.java (warnHidePreviousDeclaration): New flag	field,
	currently off.
	* XQResolveNames.java (push): Only warn about hidden previous
	declaration of warnHidePreviousDeclaration.

2006-09-28  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (IMPLICIT_TIMEZONE_BUILTIN, LANG_BUILTIN,
	NAME_BUILTIN): New constants.
	(<init>): Declare new builtins.
	(walkApplyExp): Handle new builtins.
	(currentTimezoneDecl): New field.
	(resolveModule): Initialzie currentTimezoneDecl if needed.
