@@ -1,3 +1,10 @@
+2006-10-12  Per Bothner  <per@bothner.com>
+
+	* XQResolveNames.java (NUMBER_BUILTIN): New constant.
+	(<init>): Push number function.
+	(walkApplyExp): Handle fn:number.
+	* XQuery.java (initXQuery): No number declare fn:number here.
+
 2006-10-07  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (initXQuery): Declare fn:insert-before, fn:tokenize,
